style.css
body {
  font-family: 'Lato', sans-serif;
  background-color: #f0f0f0;
}
.site {
  order: 1;
  font-size: 1.75em;
  width: 2em;
}
.navigation{
  display: flex;
  flex-flow: column;
}

nav ul{
  display: none;
}

nav ul li{
  display: block;
}

table {
    table-layout: fixed;
}

th, td {
    padding: 15px;
    text-align: left;
    border-bottom: 1px solid #ddd;
}

tr:hover {
  background-color: #f5f5f5;
}

a:link, a:visited, a:active {
  color: black;
}

a:hover {
  color: #fece2f;
}

a:active {
  background-color: #fece2f;
}


tr:nth-child(even) {
  background-color: #f2f2f2;
}

th {
    background-color: black;
    color: white;
}

.bio, .bio2, .all {
  display: flex;
  flex-flow: column;
}

@media (max-width: 800px) {
  .logo-small {
    display: none;
  }
}

@media (min-width: 800px){
  nav ul{
    display: flex;
  }

  .logo-large {
  display: none;
  margin-left: -1.5em;
}

  .navigation {
    flex-flow: row;
    justify-content: flex-end;
  }

  .site {
    display: none;
  }

  .bio, .bio2, .all {
    flex-flow:row;
  }

}

.bio, .bio2 {
  display:flex;
  flex-flow: row;
}

#about {
  text-align: center;
}


#heads {
  font-family: 'Raleway', sans-serif;
}

#nav1 {
  padding: 0;
}

#nav1 li {
    list-style-type: none;
    float: left;
    margin: 0;
    padding: 0;
    width: 100%;
    height: 100%;
    font-size:2rem;
}

#nav1 a:link, a:visited {
  display: block;
  color: #ffffff;
  background-color: #000000;
  text-decoration: none;
  padding: 10px;
  padding-left: 50px;
  font-family: 'Open Sans Condensed', sans-serif;
}

#nav1 a:hover, a:active{
  color: #ebe3ce;
  background-color: #000000;
}

#nav2{
  text-align: center
}
#subheads {
  font-family: 'Open Sans Condensed', sans-serif;
}

#footer a:link, a:visited {
  color: #ffffff;
  background-color: #000000;
  text-decoration:none;
}

#footer {
  padding-right: 50px;
  list-style-type: none;
  color: #ffffff;
  background-color: #000000;
  font-size: 3rem;
  text-align: left;
  font-family: 'Open Sans Condensed', sans-serif;
  border-top: 1px;
  text-align: right;
}
#footer li{
  display:inline;
}

#bodycontainer {
  background-color: #f0f0f0;
  width: 100%;
}

#container {

}

/* Style The Dropdown Button */
.dropbtn {
    background-color: #C0C0C0;
    color: white;
    padding: 16px;
    font-size: 16px;
    border: none;
    cursor: pointer;
}

/* The container <div> - needed to position the dropdown content */
.dropdown {
    position: relative;
    display: inline-block;
    padding-top: 5%;
    padding-left: 50%;
}

/* Dropdown Content (Hidden by Default) */
.dropdown-content {
    display: none;
    position: absolute;
    background-color: #000000;
    min-width: 160px;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
}

/* Links inside the dropdown */
.dropdown-content a {
    color: white;
    padding: 12px 16px;
    text-decoration: none;
    display: block;
}

/* Change color of dropdown links on hover */
.dropdown-content a:hover {background-color: #C0C0C0}

/* Show the dropdown menu on hover */
.dropdown:hover .dropdown-content {
    display: block;
    background-color: #000000;
}

#navposters {
  list-style-type: none;
  text-decoration: none;
  column-count: 2;
}

h1 {
  font-size: 5rem;
  margin-bottom: 1rem;
  font-family:'Raleway', sans-serif;
  text-align: center;
}

.videoWrapper {
  position: relative;
  padding-bottom: 56.25%; /*16:9 ratio*/
  padding-top: 10%;
  height: 0;
}

.videoWrapper iframe {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  width: 100%;
  height: 100%;
}

h2 {
  font-family: "Open Sans Condensed", sans-serif;
  font-size: 4rem;
  text-align: center;
   position: inherit;
   top: 450px;
   left: 0;
   width: 100%;
   padding-top: 1rem;
}

h3 {
  font-family: "Open Sans Condensed", sans-serif;
  font-size: 2rem;
  text-align: center;
   position: inherit;
   top: 450px;
   left: 0;
   width: 100%;
   padding-top: 1rem;
}

#movie_menu li {
  list-style-type: none;
  display: block;
  float: left;
  margin: 0;
  padding: 0;
  width: 25%;
  font-size: 3rem;

}
#movie_menu li a:link {
  display: block;
  color: #ffffff;
  background-color: #000000;
  text-decoration: none;
  text-align: center;
  padding: 50px;
  padding-left: 0px;
  font-family: 'Open Sans Condensed', sans-serif;
}

.toplink {
  text-align:center;
}

.paragraph {
  display: flex;
}

/* Slideshow container */
.slideshow-container {
  max-width: 100%;
  position: relative;
  margin: auto;
}

/* Next & previous buttons */
.prev, .next {
  cursor: pointer;
  position: absolute;
  top: 50%;
  width: auto;
  margin-top: -22px;
  padding: 16px;
  color: white;
  font-weight: bold;
  font-size: 18px;
  transition: 0.6s ease;
  border-radius: 0 3px 3px 0;
}

/* Position the "next button" to the right */
.next {
  right: 0;
  border-radius: 3px 0 0 3px;
}

/* On hover, add a black background color with a little bit see-through */
.prev:hover, .next:hover {
  background-color: rgba(0,0,0,0.8);
}

/* Caption text */
.text {
  color: #f2f2f2;
  font-size: 30px;
  padding: 8px 12px;
  position: absolute;
  bottom: 8px;
  width: 100%;
  text-align: left;
}

/* Number text (1/3 etc) */
.numbertext {
  color: #f2f2f2;
  font-size: 12px;
  padding: 8px 12px;
  position: absolute;
  top: 0;
}

/* The dots/bullets/indicators */
.dot {
  cursor:pointer;
  height: 13px;
  width: 13px;
  margin: 0 2px;
  background-color: #bbb;
  border-radius: 50%;
  display: inline-block;
  transition: background-color 0.6s ease;
}

.active, .dot:hover {
  background-color: #717171;
}

/* Fading animation */
.fade {
  -webkit-animation-name: fade;
  -webkit-animation-duration: 1.5s;
  animation-name: fade;
  animation-duration: 1.5s;
}

@-webkit-keyframes fade {
  from {opacity: .4}
  to {opacity: 1}
}

@keyframes fade {
  from {opacity: .4}
  to {opacity: 1}
}

.table {
  overflow-y: hidden;
  overflow-x: auto;
}

.table td:before {
  content: attr(datalabel);
  float: left;
}

